src/snapshots/ebnf__transform__test__alternation_removal_3.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - a
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - b
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - c
        - name: ""

