src/snapshots/ebnf__transform__test__alternation_removal_non_term.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - C
        - name: ""

