src/snapshots/ebnf__transform__test__alternation_star.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - ~0
        - name: ""
  - lhs: ~1
    rhs:
      NonTerminal:
        - B
        - name: ""
  - lhs: ~1
    rhs:
      NonTerminal:
        - C
        - name: ""
  - lhs: ~0
    rhs:
      Multiple:
        - - NonTerminal:
              - ~1
              - name: ~
          - NonTerminal:
              - ~0
              - name: ""
        - name: ~
  - lhs: ~0
    rhs: Epsilon

