src/snapshots/ebnf__transform__test__group_removal.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - a
        - name: ""

