src/snapshots/ebnf__transform__test__multiple_3.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      Multiple:
        - - NonTerminal:
              - A
              - name: ""
          - NonTerminal:
              - B
              - name: ""
          - NonTerminal:
              - C
              - name: ""
        - name: ""

