src/snapshots/ebnf__transform__test__multiple_plus.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - ~0
        - name: ""
  - lhs: ~1
    rhs:
      Multiple:
        - - NonTerminal:
              - B
              - name: ""
          - NonTerminal:
              - C
              - name: ""
        - name: ""
  - lhs: ~0
    rhs:
      Multiple:
        - - NonTerminal:
              - ~1
              - name: ~
          - NonTerminal:
              - ~0
              - name: ""
        - name: ~
  - lhs: ~0
    rhs:
      Multiple:
        - - NonTerminal:
              - B
              - name: ""
          - NonTerminal:
              - C
              - name: ""
        - name: ""

