src/snapshots/ebnf__transform__test__no_change.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - a
        - name: ""
  - lhs: B
    rhs:
      NonTerminal:
        - b
        - name: ""

