src/snapshots/ebnf__transform__test__no_change_2.snap
---
source: src/transform.rs
expression: result
---
expressions:
  - lhs: A
    rhs:
      NonTerminal:
        - a
        - name: ""
  - lhs: A
    rhs:
      NonTerminal:
        - b
        - name: ""

